# PhantomX

./: .gitIgnore  Dockerfile  Dockerfile.gpu  FLY_DEPLOYMENT_ISSUES.md  IMPLEMENTATION_LOG.md  LICENSE  QUICK_REFERENCE.md  README.md  RESEACH_VULGARISATION.md  RESEARCH_LOG.md  RESEARCH_VULGARISATION.md  evaluate.py  fly.gpu.toml  gpu-entrypoint.sh  gpu-post-init.sh  pyproject.toml  requirements.txt  start.sh  train.py  upload_data.py
configs/: ablation_study.yaml  config.yaml  cross_dataset.yaml  lstm_baseline.yaml  progressive_vqvae.yaml  rvq_distillation.yaml
configs/augmentation/: none.yaml  standard.yaml  strong.yaml
configs/dataset/: mc_maze.yaml  mc_rtt.yaml
configs/experiment/: exp22c_teacher.yaml  exp23_validation.yaml  exp25_mamba.yaml  lstm_baseline.yaml
configs/model/: lstm.yaml  mamba.yaml  transformer.yaml  vqvae.yaml
configs/trainer/: default.yaml  progressive.yaml
docs/: FLY_GPU.md  MIGRATION_GUIDE.md  PHANTOMLINK_INTEGRATION.md  dataset_usage.py
notebooks/: quick_start.ipynb
prompts/: RESEARCH_CRITIC_PROMPT.md
python/: compare_models.py  diagnose_mcrtt.py  evaluate_vqvae.py  exp10_beat_lstm.py  exp11_close_gap.py  exp12_mamba_reconstruction.py  exp12_residual_vq.py  exp13_wide_window_mamba.py  exp14_fsq_pivot.py  exp15_manifold_quantization.py  exp16_frankenstein.py  exp17_ladr_vq.py  exp18_ladr_vq_v2.py  exp19_distill_rvq.py  exp20_distill_sweep.py  exp21_super_teacher.py  exp21b_simplified_teacher.py  exp22_distill_wide_transformer.py  exp22b_distill_with_augmentation.py  exp22c_multiseed_teacher.py  exp23_statistical_validation.py  exp24_validate_22c.py  exp25_mamba_mcrtt.py  exp25b_mamba_mcrtt.py  exp2_raw_baseline.py  exp3_temporal.py  exp4_poyo_variants.py  exp5_temporal_vqvae.py  exp6_improved_vqvae.py  exp7_temporal_richness.py  exp8_codebook_collapse.py  exp9_progressive_vqvae.py  setup.py  test_zero_shot.py  train_labram.py
python/phantomx/: __init__.py  __main__.py  cli.py  config.py  model.py  models_extended.py  runner.py  trainer.py  tta.py
python/phantomx/data/: __init__.py  mc_maze_loader.py  spike_dataset.py
python/phantomx/inference/: __init__.py  labram_decoder.py
python/phantomx/tokenizer/: __init__.py  binning.py  spike_tokenizer.py  token_vocabulary.py
python/phantomx/tta/: __init__.py  entropy_minimizer.py  fsq_optimizer.py  tta_optimizer.py
python/phantomx/vqvae/: __init__.py  codebook.py  decoder.py  encoder.py  fsq.py  fsq_trainer.py  fsq_vae.py  spike_decoder.py  trainer.py  vqvae.py
src/: __init__.py  trainer.py
src/datamodules/: __init__.py  base.py  mc_maze.py  mc_rtt.py
src/utils/: __init__.py  augmentation.py  logging.py  metrics.py  seeding.py
tests/: __init__.py  conftest.py  test_inference.py  test_tokenizer.py  test_vqvae.py
