[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomx"
version = "0.1.0"
description = "LaBraM-POYO Neural Foundation Model: Population-geometry BCI decoding with electrode-dropout robustness"
authors = [
    {name = "Youssef El abbassi", email = "youssef@elabbassi.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["bci", "neural-decoding", "vq-vae", "brain-computer-interface", "deep-learning"]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pynwb>=2.5.0",
    "h5py>=3.9.0",
    "einops>=0.7.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]
integration = [
    "msgpack>=1.0.5",
    "websockets>=11.0.3",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]
all = [
    "phantomx[dev,onnx,integration,notebooks]",
]

[project.urls]
"Homepage" = "https://github.com/yelabb/PhantomX"
"Bug Tracker" = "https://github.com/yelabb/PhantomX/issues"
"Documentation" = "https://github.com/yelabb/PhantomX#readme"

[project.scripts]
phantomx-train = "phantomx.cli:train_cli"
phantomx-test = "phantomx.cli:test_cli"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
